fixed navigation on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -50,10 +50,6 @@ nav ul li a {
   color: var(--secondary-color-dark);
 }
 
-a:visited {
-  color: var(--secondary-color-dark);
-}
-
 nav ul li a:hover {
   text-decoration: underline solid var(--primary-color);
 }
